Fix mobile spacing

--- a/css/osm.css
+++ b/css/osm.css
@@ -10,7 +10,7 @@
 
 
 #label-list{
-    margin: 70px 0px 20px 0px;
+    margin: 0px 0px 20px 0px;
 }
 
 .gitbutton {
